# dynacom

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
documentation/: dynacom_docs.tex
include/dynacom/: contact6d.hpp  contact_base.hpp  contact_point.hpp  dyna_com.hpp  python.hpp
python/: CMakeLists.txt  contact_6d.cpp  contact_base.cpp  contact_point.cpp  dyna_com.cpp  dynacom_modules.cpp
python/dynacom/: __init__.py
src/: contac6d.cpp  contact_point.cpp  dyna_com.cpp
tests/: CMakeLists.txt
tests/python/: test_contacts.py
